# sonic-py-swsssdk

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  azure-pipelines.yml  pyproject.toml  setup.py  test-results.xml
.github/workflows/: codeql.yml
patches/: aspect_rules_py.patch
src/swsssdk/: __init__.py  configdb.py  dbconnector.py  interface.py  port_util.py  sonic_db_dump_load.py  util.py
src/swsssdk/config/: database_config.json
src/swsssdk/scripts/: sonic-db-cli
test/: sonic_db_dump_load_test.py  test_configdb.py  test_moduleLoad.py  test_port_util.py  test_redis_connect_host.py
test/config/: database_global.json
