module(name = "sonic-py-swsssdk")

bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "aspect_rules_py", version = "1.7.1")

single_version_override(
    module_name = "aspect_rules_py",
    patches = [
        "//patches:aspect_rules_py.patch",
    ],
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    python_version = "3.11.6",
)

uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")

uv.declare_hub(hub_name = "swsssdk_pip")

uv.declare_venv(
    hub_name = "swsssdk_pip",
    venv_name = "default",
)

uv.lockfile(
    hub_name = "swsssdk_pip",
    venv_name = "default",
    src = "//:uv.lock",
)

use_repo(uv, "swsssdk_pip")
